--- a/AutoCorrectandTextGeneration/Notebooks/AutocorrectAndGenerationusingShakespeare.ipynb
+++ b/AutoCorrectandTextGeneration/Notebooks/AutocorrectAndGenerationusingShakespeare.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import string\n",
     "import pandas as pd\n",
-    "from sklearn import preprocessing\n",
+    "import string\n",
     "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,6 +134,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This is needed, because it will help for sentence creation later.\n",
+    "first_words = {}\n",
+    "for line in open(training_data_file):\n",
+    "    #Create Stripped Sentences\n",
+    "    line = line.rstrip().lower()\n",
+    "    tokens = line.translate(str.maketrans('','', string.punctuation)).split()\n",
+    "    if len(tokens) > 0:\n",
+    "        token = tokens[0]\n",
+    "        if token not in first_words:\n",
+    "            first_words[token] = 1\n",
+    "        else:\n",
+    "            first_words[token]+=1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,10 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Re-running this requires all the dictionaries to be made again\n",
     "total = 0\n",
     "for w in words:\n",
     "    for j in words[w]:\n",
@@ -177,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +256,7 @@
        "'not'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,16 +267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'to'"
+       "'so'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,22 +287,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'the'"
+       "'but'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "word_guesser('I am not to')"
+    "word_guesser('I am a not so')"
    ]
   },
   {
@@ -294,40 +314,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "word_dict = {}\n",
-    "for line in open(training_data_file):\n",
-    "    #Create Stripped Sentences\n",
-    "    line = line.rstrip().lower()\n",
-    "    tokens = line.translate(str.maketrans('','', string.punctuation)).split()\n",
-    "    length = len(tokens)\n",
-    "    #Create a word_dictionary that counts the amount of times words are used\n",
-    "    for x in tokens:\n",
-    "        if x not in word_dict:\n",
-    "            word_dict[x] = 1\n",
-    "        else:\n",
-    "            word_dict[x] = word_dict[x] + 1\n",
-    "frame = pd.DataFrame.from_dict(word_dict, orient = 'index')\n",
-    "#Create a probability dictionary\n",
-    "prob_func = frame.apply(create_probability, args = (frame[0].sum(),)).copy()        "
+    "#First, we take the dictionary of all words that are first in the sentence and create a probability distribution out of it\n",
+    "#This essentially gives us likely words to start a sentence\n",
+    "first_words_frame = pd.DataFrame.from_dict(first_words, orient = 'index')\n",
+    "first_words_func = first_words_frame.apply(create_probability, args = (first_words_frame[0].sum(),))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generation(size):\n",
     "    for y in range(0, size):\n",
-    "        #First, two words are sampled from the total distribution\n",
+    "        first = random.choices(first_words_func.index, first_words_func[0])[0]\n",
     "        \n",
-    "        z = (random.choices(prob_func.index, prob_func[0]))[0] + ' ' + (random.choices(prob_func.index, prob_func[0]))[0] \n",
+    "        #Here we sample the one word previous dictionary to get a likely word from the word that starts the sentence \n",
+    "        second_frame = pd.DataFrame.from_dict(words[first], orient = 'index')\n",
+    "        second = random.choices(second_frame.index, second_frame[0])[0]\n",
     "        \n",
-    "        #Sample 8 words based on these two sampled words\n",
+    "        z = first + ' ' + second\n",
+    "        #Now that we have sampled those two words, we can use the previous process and just add to the string\n",
     "        for x in range(0,8):\n",
     "            z = z +  ' ' + word_guesser(z)\n",
     "        print(z)\n",
@@ -336,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -345,19 +357,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "some my lord is and by and to my spirits\n",
+      "enter nerissa and i am glad to the king your\n",
       "\n",
       "\n",
-      "fold it in a most of the good of the\n",
+      "urge you your good my good master i will be\n",
       "\n",
       "\n",
-      "the counterfeit of the heart and with him that the\n",
+      "marry sweet sir i cannot be the full of his\n",
       "\n",
       "\n",
-      "wits to the gods and a good in the great\n",
+      "nor tent i pray you my love and i shall\n",
       "\n",
       "\n",
-      "with will and you for i have not be so\n",
+      "not furnishd with the lords of the very king and\n",
       "\n",
       "\n"
      ]
@@ -370,26 +382,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pale the looks of the king of his own and\n",
+      "o brutus my lord my lord and all this and\n",
       "\n",
       "\n",
-      "hand her oer the blood that will not that i\n",
+      "bowstring and the kings of a suit of thy head\n",
       "\n",
       "\n",
-      "honest when i am a most like to the king\n",
+      "when to do you sir i will not with the\n",
       "\n",
       "\n",
-      "ill in the wars of him all the king of\n",
+      "or that my woman of a great and i shall\n",
       "\n",
       "\n",
-      "as hold a very man and he will not a\n",
+      "of love and your bed and in the king of\n",
       "\n",
       "\n"
      ]
@@ -397,49 +409,6 @@
    ],
    "source": [
     "generation(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"words = {}\\nfor line in open(training_data_file):\\n    #Create Stripped Sentences\\n    line = line.rstrip().lower()\\n    tokens = line.translate(str.maketrans('','', string.punctuation)).split()\\n    length = len(tokens)\\n    for i in range(length):\\n        token = tokens[i]\\n        if i == 0:\\n            pass\\n        elif i == length - 1:\\n            pass\\n        else:    \\n            previous = tokens[i-1]\\n            if token not in words:\\n                words[token] = {previous: 1}\\n            else:\\n                if previous not in words[token]:\\n                    words[token][previous] = 1\\n                else:\\n                    value = words[token][previous] \\n                    words[token][previous] = value + 1\\n\""
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Previous work in case I need it\n",
-    "'''words = {}\n",
-    "for line in open(training_data_file):\n",
-    "    #Create Stripped Sentences\n",
-    "    line = line.rstrip().lower()\n",
-    "    tokens = line.translate(str.maketrans('','', string.punctuation)).split()\n",
-    "    length = len(tokens)\n",
-    "    for i in range(length):\n",
-    "        token = tokens[i]\n",
-    "        if i == 0:\n",
-    "            pass\n",
-    "        elif i == length - 1:\n",
-    "            pass\n",
-    "        else:    \n",
-    "            previous = tokens[i-1]\n",
-    "            if token not in words:\n",
-    "                words[token] = {previous: 1}\n",
-    "            else:\n",
-    "                if previous not in words[token]:\n",
-    "                    words[token][previous] = 1\n",
-    "                else:\n",
-    "                    value = words[token][previous] \n",
-    "                    words[token][previous] = value + 1\n",
-    "'''"
    ]
   },
   {
@@ -466,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
